--- a/kersplode.html
+++ b/kersplode.html
@@ -10,12 +10,12 @@
 			if (!canvas.getContext('webgl') || !canvas.getContext('experimental-webgl')) {
 
 				var h1 = document.createElement('h1');
-				h1.textContent = "DALEKS DONT KNOW WHY YOUR BROWSER DOESNT SUPPORT WEBGL?!?!";
+				h1.innerHTML = "DALEKS DONT KNOW WHY YOUR BROWSER DOESNT SUPPORT WEBGL?!?!";
 				document.body.appendChild(h1);
 			}
 		}
 	</script>
-	
+
 	<script type='text/javascript' src='webgl.js'></script>
 </body>
 </html>
