--- a/star.html
+++ b/star.html
@@ -10,7 +10,7 @@
 			if (!canvas.getContext('webgl') || !canvas.getContext('experimental-webgl')) {
 
 				var h1 = document.createElement('h1');
-				h1.textContent = "DALEKS DONT KNOW WHY YOUR BROWSER DOESNT SUPPORT WEBGL?!?!";
+				h1.innerHTML = "DALEKS DONT KNOW WHY YOUR BROWSER DOESNT SUPPORT WEBGL?!?!";
 				document.body.appendChild(h1);
 			}
 		}
