--- a/kersplode.html
+++ b/kersplode.html
@@ -4,10 +4,12 @@
 </head>
 <body>
 	<script type='text/javascript'>
-	
+
 		//test for webgl support
 		var canvas = document.createElement('canvas'),
 				gl = null;
+
+		document.body.appendChild(canvas);
 
 		try {
 			gl = canas.getContext('webgl') || canvas.getContext('experimental-webgl');
