--- a/kersplode.html
+++ b/kersplode.html
@@ -7,13 +7,14 @@
 
 		//test for webgl support
 		var canvas = document.createElement('canvas');
+		var ctx = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
 
-		if (!canvas.getContext('webgl') || !canvas.getContext('experimental-webgl')) {
+		if (!ctx) {
 			var h1 = document.createElement('p');
 			h1.innerHTML = "You might not fully support webGL?!";
 			document.body.appendChild(h1);
 		}
-		
+
 	</script>
 
 	<script type='text/javascript' src='webgl.js'></script>
