--- a/star.html
+++ b/star.html
@@ -7,8 +7,9 @@
 
 		//test for webgl support
 		var canvas = document.createElement('canvas');
+		var ctx = canvas.getContext('webgl') || canvas.getContext('experimental-webgl');
 
-		if (!canvas.getContext('webgl') || !canvas.getContext('experimental-webgl')) {
+		if (!ctx) {
 			var h1 = document.createElement('p');
 			h1.innerHTML = "You might not fully support webGL?!";
 			document.body.appendChild(h1);
